--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,28 +28,23 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cloud_firestore: null
   cupertino_icons: ^1.0.8
-  firebase_core:
-  firebase_auth:
-  firebase_database:
-  cloud_firestore:
-  flutter_bloc: 
-
-
+  firebase_auth: null
+  firebase_core: null
+  firebase_database: null
+  fl_chart: ^1.0.0
   flutter:
     sdk: flutter
-  google_fonts: ^6.2.1
-  iconsax: ^0.0.8
+  flutter_bloc: null
   geolocator: ^14.0.1
+  google_fonts: ^6.2.1
+  http: ^1.4.0
+  iconsax: ^0.0.8
+  intl: ^0.20.2
   weather_icons: ^3.0.0
 
 dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
