--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,11 +37,13 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: null
+  flutter_localization: ^0.3.3
   geolocator: ^14.0.1
   google_fonts: ^6.2.1
   http: ^1.4.0
   iconsax: ^0.0.8
-  intl: ^0.20.2
+  intl: ^0.19.0
+  shared_preferences: ^2.5.3
   weather_icons: ^3.0.0
 
 dev_dependencies:
@@ -85,3 +87,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+flutter_intl:
+  enabled: true
