--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   http: ^1.4.0
   iconsax: ^0.0.8
   intl: ^0.19.0
+  rxdart: ^0.28.0
   shared_preferences: ^2.5.3
   weather_icons: ^3.0.0
 
